Fixing front end overflows

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 body {
 	padding: 0;
 	margin: 0;
-	overflow-x: hidden; /* Hide horizontal scrollbar */
+	overflow: hidden; /* Hide horizontal scrollbar */
 }
 #burgerSpline {
 	width: fit-content !important;
